--- a/app/src/main/res/layout-land/activity_main2.xml
+++ b/app/src/main/res/layout-land/activity_main2.xml
@@ -11,10 +11,9 @@
         android:layout_width="match_parent"
         android:layout_height="60dp"
 
-        android:background="#1F5309"
-        android:fontFamily="cursive"
+        android:background="@color/black"
         android:gravity="center"
-        android:text="Welcome to Hifz App"
+        android:text="Welcome"
         android:textColor="#FFFFFF"
         android:textSize="32dp"
         android:textStyle="bold"
@@ -29,8 +28,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:backgroundTint="#1F5309"
-        android:text="Delete"
+        android:backgroundTint="@color/purple_700"
+        android:text="Delete Student"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.11"
@@ -39,11 +38,11 @@
 
     <Button
         android:id="@+id/insert"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="163dp"
+        android:layout_height="48dp"
         android:layout_marginTop="32dp"
-        android:backgroundTint="#1F5309"
-        android:text="Insert"
+        android:backgroundTint="@color/purple_700"
+        android:text="Add Student"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.11"
@@ -56,8 +55,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:backgroundTint="#1F5309"
-        android:text="Update"
+        android:backgroundTint="@color/purple_700"
+        android:text="Update Student"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.11"
@@ -69,14 +68,13 @@
         android:layout_width="367dp"
         android:layout_height="66dp"
         android:layout_marginTop="10dp"
-
+        android:background="@color/black"
         android:layout_marginEnd="15dp"
-        android:fontFamily="cursive"
         android:paddingStart="20dp"
         android:paddingTop="10dp"
-        android:text="Students List:"
+        android:text="All Students:"
         android:textColor="#FFFFFF"
-        android:textSize="32dp"
+        android:textSize="26dp"
 
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
