--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,13 +12,11 @@
         android:layout_width="match_parent"
         android:layout_height="60dp"
 
-        android:background="#1F5309"
-        android:fontFamily="cursive"
+        android:background="@color/black"
         android:gravity="center"
-        android:text="Insert Student"
+        android:text="Add Student"
         android:textColor="#FFFFFF"
-        android:textSize="32dp"
-        android:textStyle="bold"
+        android:textSize="22dp"
         app:layout_constraintEnd_toEndOf="parent"
 
         app:layout_constraintStart_toStartOf="parent"
@@ -75,8 +73,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Insert"
-        android:backgroundTint="#1F5309"
+        android:text="Add"
+        android:backgroundTint="@color/purple_700"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
