--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -9,15 +9,12 @@
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-
-        android:background="#1F5309"
-        android:fontFamily="cursive"
+        android:layout_height="50dp"
+        android:background="@color/black"
         android:gravity="center"
-        android:text="Welcome to  Hifz App"
+        android:text="Welcome"
         android:textColor="#FFFFFF"
-        android:textSize="32dp"
-        android:textStyle="bold"
+        android:textSize="22dp"
         app:layout_constraintEnd_toEndOf="parent"
 
         app:layout_constraintStart_toStartOf="parent"
@@ -28,9 +25,9 @@
         android:id="@+id/delete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Delete"
+        android:text="Delete Student"
         android:layout_marginTop="10dp"
-        android:backgroundTint="#1F5309"
+        android:backgroundTint="@color/purple_700"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,11 +35,11 @@
 
     <Button
         android:id="@+id/insert"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="171dp"
+        android:layout_height="48dp"
         android:layout_marginTop="24dp"
-        android:text="Insert"
-        android:backgroundTint="#1F5309"
+        android:backgroundTint="@color/purple_700"
+        android:text="Add  Student"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -52,9 +49,9 @@
         android:id="@+id/update"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Update"
+        android:text="Update Student"
         android:textColor="@color/white"
-        android:backgroundTint="#1F5309"
+        android:backgroundTint="@color/purple_700"
         android:layout_marginTop="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -65,14 +62,12 @@
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginTop="10dp"
-        android:background="#1F5309"
-        android:fontFamily="cursive"
+        android:background="@color/black"
         android:paddingTop="10dp"
         android:paddingStart="20dp"
-        android:text="Students List:"
+        android:text="All Students:"
         android:textColor="#FFFFFF"
-        android:textSize="32dp"
-        android:textStyle="bold"
+        android:textSize="22dp"
         app:layout_constraintEnd_toEndOf="parent"
 
         app:layout_constraintStart_toStartOf="parent"
