--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
     tools:context=".MainActivity">
 
 
@@ -13,13 +12,11 @@
         android:layout_width="match_parent"
         android:layout_height="60dp"
 
-        android:background="#1F5309"
-        android:fontFamily="cursive"
+        android:background="@color/black"
         android:gravity="center"
-        android:text="Insert Student"
+        android:text="Add Student"
         android:textColor="#FFFFFF"
-        android:textSize="32dp"
-        android:textStyle="bold"
+        android:textSize="26dp"
         app:layout_constraintEnd_toEndOf="parent"
 
         app:layout_constraintStart_toStartOf="parent"
@@ -76,8 +73,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Insert"
-        android:backgroundTint="#1F5309"
+        android:text="add"
+        android:backgroundTint="@color/purple_700"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
